style.css
head{
  background-color: #0b121a;
}   
body {
margin: 0;
padding: 0;
box-sizing: border-box;
background-color: #0b121a;
display: flex;
justify-content: center;
align-items: center;
min-height: 100vh;
flex-direction: column;
gap: 30px;
color: #fff;
}
.inputBox{
  position: relative;
  width: 250px;
}
.inputBox input{
  width: 100%;
  padding: 10px;
  border: 1px solid rgba(255,255,255,0.25);
  background: #0b121a;
  border-radius: 5px;
  outline: none;
  color: #fff;
  font-size: 1em;
  transition: 0.5s;
}
.inputBox span{
  position: absolute;
  left: 0;
  padding: 10px;
  pointer-events: none;
  font-size: 1em;
  color: rgba(255,255,255,0.25);
  text-transform: uppercase;
  transition: 0.5s;
}
.inputBox input:valid ~ span,
.inputBox input:focus ~ span{
  color: #76dbc1;
  transform: translateX(10px) translateY(-7px);
  font-size: 0.65em;
  padding: 0 10px;
  background: #0b121a;
  border-left: 1px solid #76dbc1;
  border-right: 1px solid #76dbc1;
  letter-spacing: 0.2em;
}
.inputBox input:valid,
.inputBox input:focus{
  border: 1px solid #76dbc1
}
.container{
  
}
.btn{
  border: 1px solid rgba(255,255,255,0.25);
  border-radius: 30px;
  background: none;
  padding: 10px 20px;
  font-size: 20px;
  font-family: "montserrat";
  cursor: pointer;
  margin: 10px;
  color: rgba(255,255,255,0.25);
  transition: 0.8s;
  position: relative;
  overflow: hidden;
}
.btn:hover{
  color: #fff;
}
.btn::before{
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 0%;
  background: #76dbc1;
  z-index: -1;
  transition: 0.8s;
  border-radius: 0 0 50% 50%;
}
.btn:hover::before{
  height: 180%;
}
.card{
  background-color: #0b121a;
}

.jumbotron {
  background-color: #0b121a;
  color: #fff;
  border-radius: 0%;
}

h2 {
  font-weight: 300;
}

h3 {
  font-weight: 200;
  font-size: 15pt;
}

h4 {
  font-weight: 100;
  font-size: 10pt;
}

h5 {
  font-weight: 600;
  font-size: 30pt

}

h6 {
  font-weight: 200;
  font-size: 15pt
}

textarea{
  background-color: #0b121a;
  border: 1px solid rgba(255,255,255,0.25);
  border-radius: 5px;
  color: #fff;
  font-size: 1em;
}


.textarea:focus{
  border: 2px solid #76dbc1
}

select{
  position: relative;
  width: 250px;
  background-color: #0b121a;
  border: 1px solid rgba(255,255,255,0.25);
  color: #fff;
}

.select:hover::after{
  background-color: #76dbc1;
  border: 1px solid #76dbc1;
}

.container{
  display:grid;
  height:100vh;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1.5fr 1.5fr 1.5fr;
  grid-template-areas:
  "sidebar main main main"
  "sidebar main main main"
  "content1 content2 content3 content4";
  grid-gap: 0.2rem;

}

nav{
  grid-area: nav;
}

main{
  grid-area: main;
}

#sidebar{
  grid-area: sidebar;
}

#content1{
  grid-area: content1;
}

#content2{
  grid-area: content2;
}

#content3{
  grid-area: content3;
}

#content4{
  grid-area: content4;
}

@media only screen and (max-width:550px){

}

